fix(vanillajs): center wrapped caption

--- a/vanilla-js-cbr/blocks/page/__caption/page__caption.css
+++ b/vanilla-js-cbr/blocks/page/__caption/page__caption.css
@@ -4,6 +4,8 @@
   margin: 0;
 
   padding-bottom: 20px;
+
+  text-align: center;
   
   font-style: normal;
   font-weight: 700;
